# CG_Labs

./: .gitignore  main.cpp
lab1/: CMakeLists.txt
lab1/include/Engine/Control/: base_controller.h  controller.h
lab1/include/Engine/Scene/: scene.h
lab1/res/glsl/: shader.frag  shader.vert
lab1/src/: main.cpp
lab1/src/Engine/Control/: controller.cpp
lab1/src/Engine/Scene/: scene.cpp
lab1/src/GL/: program.cpp  vao.cpp
lab1/src/SFML/: window.cpp
lab2/: CMakeLists.txt
lab2/include/Engine/Camera/: camera.h
lab2/include/Engine/Control/: base_controller.h  controller.h
lab2/include/Engine/Scene/: scene.h
lab2/include/GL/: program.h
lab2/res/glsl/: shader.vert
lab2/src/: main.cpp
lab2/src/Engine/Control/: controller.cpp
lab2/src/SFML/: window.cpp
lab3/include/GL/: vao.h
lab3/res/glsl/: shader.frag  shader.vert
lab3/src/: main.cpp
lab4/: CMakeLists.txt
lab4/include/GL/: program.h
lab4/res/glsl/: shader.frag  shader.vert
lab4/src/: main.cpp
lab4/src/GL/: program.cpp
lab4/src/SFML/: window.cpp
lab5/: CMakeLists.txt
lab5/include/Engine/Camera/: camera.h
lab5/include/Engine/Control/: base_controller.h
lab5/include/Engine/Geometry/3D/: object.h
lab5/include/SFML/: window.h
lab5/res/glsl/: shader.frag  shader.vert
lab5/src/: main.cpp
lab5/src/Engine/Geometry/3D/: pyramid.cpp  sphere.cpp
lab5/src/Engine/Scene/: scene.cpp
lab6/: CMakeLists.txt
lab6/include/GL/: gl.h
lab6/res/glsl/: raytracing.frag  raytracing.vert  shader.frag
lab6/res/scene/: objects.txt
lab6/src/: main.cpp
lab6/src/SFML/: window.cpp
(+33 files in other folders)
